feature: backend, and onesearch in frontend

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,32 @@
 {
-  "search" : {
-    "placeholder" : "Search or type a URL"
-  }
+    "Search": {
+        "placeholder": "Search or type a URL",
+        "engine-aria": "Switch search engine",
+        "engine": {
+            "google": "Google",
+            "baidu": "Baidu",
+            "bing": "Bing",
+            "duckduckgo": "DuckDuckGo",
+            "yandex": "Yandex",
+            "yahoo": "Yahoo",
+            "ecosia": "Ecosia"
+        },
+        "search-help-text": "Search {engine}"
+    },
+    "404": {
+        "title": "Page Not Found"
+    },
+    "About": {
+        "title": "SparkHome"
+    },
+    "tools": {
+        "base64": {
+            "title": "Base64 tools - LuminaraUtils",
+            "decode": "Decode",
+            "encode": "Encode",
+            "result": "Result: ",
+            "copy": "Copy",
+            "copied": "Copied"
+        }
+    }
 }
