--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,5 +1,35 @@
 {
-  "search" : {
-    "placeholder" : "搜索或输入网址"
-  }
+    "search": {
+        "placeholder": "搜索或输入网址"
+    },
+    "Search": {
+        "placeholder": "搜索或输入网址",
+        "engine-aria": "切换搜索引擎",
+        "engine": {
+            "google": "谷歌",
+            "baidu": "百度",
+            "bing": "必应",
+            "duckduckgo": "DuckDuckGo",
+            "yandex": "Yandex",
+            "yahoo": "雅虎",
+            "ecosia": "Ecosia"
+        },
+        "search-help-text": "用 {engine} 搜索"
+    },
+    "404": {
+        "title": "页面未找到"
+    },
+    "About": {
+        "title": "星火主页"
+    },
+    "tools": {
+        "base64": {
+            "title": "Base64 工具",
+            "decode": "解码",
+            "encode": "编码",
+            "result": "结果： ",
+            "copy": "复制",
+            "copied": "已复制"
+        }
+    }
 }
