--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,6 +1,17 @@
 {
     "search": {
-        "placeholder": "搜索或输入网址"
+        "placeholder": "搜索或输入网址",
+        "engine-aria": "切换搜索引擎",
+        "engine": {
+            "google": "谷歌",
+            "baidu": "百度",
+            "bing": "必应",
+            "duckduckgo": "DuckDuckGo",
+            "yandex": "Yandex",
+            "yahoo": "雅虎",
+            "ecosia": "Ecosia"
+        },
+        "search-help-text": "用 {engine} 搜索"
     },
     "Search": {
         "placeholder": "搜索或输入网址",
@@ -31,5 +42,12 @@
             "copy": "复制",
             "copied": "已复制"
         }
+    },
+    "notfound": {
+        "desc": "请检查网址是否出错。 <br/>如果你从星火主页跳转到这里，<br/> 请 <a style=\"text-decoration:underline;\" href=\"mailto:contact@alikia2x.com\">联系我们</a>",
+        "title": "网页不存在"
+    },
+    "about": {
+        "title": "星火主页"
     }
 }
