add: basic infra for new NLU system

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1,5 +1,10 @@
 {
-	"search": {
-		"placeholder": "ابحث أو اكتب عنوان URL"
-	}
+  "search": {
+    "placeholder": "ابحث أو اكتب عنوان URL"
+  },
+  "about": {
+    "license": {
+      "view": "← عرض"
+    }
+  }
 }
