--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -1,12 +1,14 @@
 {
-	"search": {
-		"placeholder": "検索またはURLを入力"
-	},
-	"Search": {
-		"engine-aria": "検索エンジンを切り替える",
-		"engine": {
-			"google": "Google"
-		},
-		"placeholder": "検索またはURLを入力"
-	}
+  "search": {
+    "engine-aria": "検索エンジンを切り替える",
+    "engine": {
+      "google": "Google"
+    },
+    "placeholder": "検索またはURLを入力"
+  },
+  "about": {
+    "license": {
+      "view": "→ 見る"
+    }
+  }
 }
